# referent

./: .env.example  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/scripts/: wait_for_db.py
backend/src/: config.py  main.py  worker.py
backend/src/api/: schemas.py
backend/src/api/routes/: downloads.py  jobs.py  questions.py  recordings.py  speakers.py  uploads.py
backend/src/application/: commands.py
backend/src/application/ports/: event_logger.py  model_client.py  queue.py  repositories.py  whisperx.py
backend/src/application/services/: docx_service.py  language_service.py  processing_service.py  speaker_service.py  transcript_query_service.py
backend/src/domain/: enums.py  errors.py  events.py  models.py
backend/src/infrastructure/agents/: graph.py  prompts.py  tools.py
backend/src/infrastructure/db/: models.py  repositories.py  session.py  uow.py
backend/src/infrastructure/files/: docx_export.py  storage.py
backend/src/infrastructure/llm/: chat.py  embeddings.py  openai_async_client.py  reranker.py
backend/src/infrastructure/logging/: async_event_logger.py  websocket_broker.py
backend/src/infrastructure/queue/: redis_queue.py
backend/src/infrastructure/whisperx/: language_detector.py  processor.py  speaker_embeddings.py
backend/src/tests/e2e/: test_contract.py
backend/src/tests/integration/: test_imports.py
backend/src/tests/unit/: test_agent_graph.py  test_services.py
frontend/: Dockerfile  nginx.conf  (+2 more)
(+13 files in other folders)
