[project]
name = "referent-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi[standard]>=0.115", "uvicorn[standard]>=0.30", "sqlalchemy[asyncio]>=2", "asyncpg>=0.29", "pgvector>=0.3", "alembic>=1.13", "redis>=5", "aiofiles>=24", "python-multipart>=0.0.9", "pydantic-settings>=2", "openai[aiohttp]>=1.55", "tenacity>=8", "python-docx>=1.1", "sse-starlette>=2", "langchain>=0.3", "langchain-core>=0.3", "numpy>=1.26", "whisperx @ git+https://github.com/m-bain/whisperx.git"]
[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.27", "ruff>=0.6", "mypy>=1.11", "coverage>=7"]
[tool.ruff]
line-length = 100
[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
